Fix for toggle on Firefox

--- a/packages/wc-compass/src/styles/_forms.scss
+++ b/packages/wc-compass/src/styles/_forms.scss
@@ -194,106 +194,3 @@
     }
   }
 }
-
-.cdg-toggle {
-  display: inline-flex;
-  gap: 8px;
-  align-items: center;
-  position: relative;
-  border-radius: 4px;
-
-  input[type='checkbox'] {
-    opacity: 0;
-    position: relative;
-    z-index: 1;
-    margin: 4px;
-    width: 32px;
-    height: 16px;
-    appearance: none;
-    flex-shrink: 0;
-    cursor: pointer;
-  }
-
-  span {
-    padding-right: 3px;
-  }
-
-  &::before,
-  &::after {
-    content: '';
-    position: absolute;
-    cursor: none;
-    top: 50%;
-    box-sizing: border-box;
-    transform: translateY(-50%);
-    @extend %quickSmoothTransition;
-  }
-
-  &::before {
-    left: 4px;
-    width: 2rem;
-    height: 1rem;
-    border: 1px solid var(--grey70);
-    border-radius: 1rem;
-    background-color: var(--grey70);
-    background-repeat: no-repeat;
-    background-position: center;
-    border-color: var(--grey70);
-  }
-
-  &::after {
-    width: 12px;
-    height: 12px;
-    border-radius: 10px;
-    left: 7px;
-    background-color: #ffffff;
-  }
-
-  &.large {
-    input[type='checkbox'] {
-      width: 40px;
-      height: 24px;
-      flex-shrink: 0;
-    }
-    &::before {
-      width: 40px;
-      height: 24px;
-    }
-    &::after {
-      width: 20px;
-      height: 20px;
-    }
-  }
-
-  &:focus-within {
-    outline: 2px solid var(--blue60);
-  }
-
-  &:has(input[type='checkbox']:checked) {
-    &::before {
-      background-color: var(--success);
-      border-color: var(--success);
-      @extend %quickSmoothTransition;
-    }
-
-    &::after {
-      left: 23px;
-      @extend %quickSmoothTransition;
-    }
-  }
-
-  &:has(input[type='checkbox']:disabled) {
-    color: var(--disabled-color);
-    &::before {
-      border-color: var(--disabled-background);
-      background-color: var(--disabled-background);
-    }
-  }
-
-  &:has(input[type='checkbox']:disabled:checked) {
-    &::before {
-      border-color: var(--status-success-background);
-      background-color: var(--status-success-background);
-    }
-  }
-}
